Made it compile with upstream changes to APIs, other minor cleanups.

--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
   -->
 <html>
   <head>
-    <script type="module" src="pkg/krustology_wasm.js"></script>
+    <script type="module" src="pkg/frost_taproot_wasm.js"></script>
     <script type="module" src="test.js"></script>
   </head>
   <body>
